<resources>
    <string name="app_name">BulkUp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BulkUp</string>
    <string name="nav_header_subtitle">Achieve your dreams</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="protein_tracker">Protein Tracker</string>
    <string name="workouts">Workouts</string>
    <string name="stats">Statistics</string>
    <string name="report_bug">Report a Bug</string>
    <string name="request_feature">Request a Feature</string>
</resources>
