<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_workout"
            android:icon="@drawable/weight"
            android:title="@string/workouts"/>
        <item
            android:id="@+id/nav_protein_tracker"
            android:icon="@drawable/food"
            android:title="@string/protein_tracker"/>
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/stats"
            android:title="@string/stats" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_request_feature"
                android:icon="@drawable/request"
                android:title="@string/request_feature" />
            <item
                android:id="@+id/nav_report_bug"
                android:icon="@drawable/bug"
                android:title="@string/report_bug" />
        </menu>
    </item>

</menu>
